--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
     <p><%= render @comments.reverse %></p>
     <%= paginate @comments %>
 
-    <h3 class="reply-to-msg">Reply to Message:</h3>
+    <h3 class="reply-to-msg">Reply to Post:</h3>
 
     <%= render 'comments/new' %>
 
